增加mark word 中gc年龄验证